# jupyterlab-open-url-parameter

./: .copier-answers.yml  .eslintignore  .gitignore  .prettierignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  package.json  pyproject.toml
.github/workflows/: build.yml  check-release.yml
binder/: environment.yml  postBuild
docs/: conf.py  environment.yml  jupyter-lite.json
jupyterlab_open_url_parameter/: __init__.py
src/: index.ts
